# docs/swagger.json
@@ -58,6 +58,22 @@
                 }
             }
         },
+        "/api/v1/control/buzzer-alarm": {
+            "post": {
+                "tags": [
+                    "Control"
+                ],
+                "operationId": "TriggerBuzzerAlarm",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/TriggerBuzzerAlarmResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/control/fingerprint-mode": {
             "post": {
                 "tags": [
@@ -117,6 +133,14 @@
             }
         },
         "ChangePinResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "TriggerBuzzerAlarmResponse": {
             "type": "object",
             "properties": {
                 "message": {
